Still working on autotools

--- a/configure.ac
+++ b/configure.ac
@@ -3,14 +3,26 @@
 
 AC_PREREQ([2.69])
 AC_INIT(GAHM, 0.0.1, this@bug.me)
-AM_INIT_AUTOMAKE(pippo, 2.6)
+AM_INIT_AUTOMAKE([foreign subdir-objects])
+AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([src/window.cpp])
 AC_CONFIG_HEADERS([config.h])
 
 # Checks for programs.
+AC_PROG_AWK
 AC_PROG_CXX
+AC_PROG_CC
+AC_PROG_INSTALL
+AC_PROG_LN_S
+AC_PROG_RANLIB
+AC_PROG_CPP
+AC_PROG_MKDIR_P
 
 # Checks for libraries.
+# FIXME: Replace `main' with a function in `-lglew':
+AC_CHECK_LIB([glew], [main])
+# FIXME: Replace `main' with a function in `-lsdl2':
+AC_CHECK_LIB([sdl2], [main])
 
 # Checks for header files.
 
@@ -22,5 +34,6 @@ AC_CHECK_HEADER_STDBOOL
 AC_CONFIG_FILES([doc/Makefile
                  examples/Makefile
                  man/Makefile
-                 scripts/Makefile])
-AC_OUTPUT(Makefile src/Makefile doc/Makefile examples/Makefile man/Makefile scripts/Makefile)
+                 scripts/Makefile
+                 src/Makefile])
+AC_OUTPUT
