--- a/configure.ac
+++ b/configure.ac
@@ -1,39 +1,25 @@
-#                                               -*- Autoconf -*-
-# Process this file with autoconf to produce a configure script.
-
-AC_PREREQ([2.69])
-AC_INIT(GAHM, 0.0.1, this@bug.me)
-AM_INIT_AUTOMAKE([foreign subdir-objects])
+AC_INIT([ShaderExamples], [0.1])
 AC_CONFIG_MACRO_DIR([m4])
-AC_CONFIG_SRCDIR([src/window.cpp])
+AM_INIT_AUTOMAKE([foreign subdir-objects])
+AC_CONFIG_SRCDIR([configure.ac])
 AC_CONFIG_HEADERS([config.h])
 
-# Checks for programs.
-AC_PROG_AWK
+AC_PROG_LIBTOOL
 AC_PROG_CXX
-AC_PROG_CC
-AC_PROG_INSTALL
-AC_PROG_LN_S
-AC_PROG_RANLIB
-AC_PROG_CPP
-AC_PROG_MKDIR_P
+AC_LANG(C++)
 
-# Checks for libraries.
-# FIXME: Replace `main' with a function in `-lglew':
-AC_CHECK_LIB([glew], [main])
-# FIXME: Replace `main' with a function in `-lsdl2':
-AC_CHECK_LIB([sdl2], [main])
+BOOST_REQUIRE
+BOOST_PROGRAM_OPTIONS
 
-# Checks for header files.
 
-# Checks for typedefs, structures, and compiler characteristics.
-AC_CHECK_HEADER_STDBOOL
+AC_CHECK_HEADER([glm/glm.hpp], , AC_MSG_ERROR(GLM headers are required. Please see INSTALL))
 
-# Checks for library functions.
+# Find the following libraries on the system
+PKG_CHECK_MODULES([gl], [gl])
+PKG_CHECK_MODULES([glew], [glew])
+PKG_CHECK_MODULES([sdl2], [sdl2])
 
-AC_CONFIG_FILES([doc/Makefile
-                 examples/Makefile
-                 man/Makefile
-                 scripts/Makefile
-                 src/Makefile])
+AC_CONFIG_FILES([Makefile
+    src/Makefile
+    shaders/Makefile])
 AC_OUTPUT
