--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,19 +1,9 @@
-EXTRA_DIST = windows.h
+EXTRA_DIST = GameWorld.h GameAssetManager.h GameAsset.h CubeAsset.h
 
-bin_PROGRAMS = windows
-shaderexample_SOURCES = windows.cpp
+bin_PROGRAMS = shaderexample
+shaderexample_SOURCES = main.cc GameWorld.cc GameAssetManager.cc CubeAsset.cc
 
 AM_CPPFLAGS = -DGL_GLEXT_PROTOTYPES -DGL3_PROTOTYPES
 AM_CPPFLAGS += -std=c++11
-AM_CPPFLAGS += $(gl_CFLAGS) $(glew_CFLAGS) $(sdl2_CFLAGS)
-LIBS += $(gl_LIBS) $(glew_LIBS) $(sdl2_LIBS)
-
-
-# whatever flags you want to pass to the C compiler & linker
-#CFLAGS = -Wall -std=c++11
-#LDFLAGS = -framework OpenGL -lsdl2 -lglew
-
-# this lists the binaries to produce, the (non-PHONY, binary) targets in
-# the previous manual Makefile
-#bin_PROGRAMS = window
-#window_SOURCES =
+AM_CPPFLAGS += $(gl_CFLAGS) $(glew_CFLAGS) $(sdl2_CFLAGS) $(BOOST_CPPFLAGS)
+LIBS += $(gl_LIBS) $(glew_LIBS) $(sdl2_LIBS) $(BOOST_THREAD_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS)
