--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ install:
 - sudo apt-get install -q libglm-dev
 - sudo apt-get install -q libglew-dev
 - sudo apt-get install -q -y libsdl2-image-dev
+- sudo apt-get install -q automake
+- sudo apt-get install build-essential 
 
 script:
 - autoreconf -i
