--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 - sudo apt-get install -q -y libsdl2-image-dev
 - sudo apt-get install -q automake
 - sudo apt-get install -q build-essential
-- aptitude search libtool | grep 2.4.6 
+- apt-search libtool | grep 2.4.6 
 - sudo apt-get install -q libboost-all-dev
 - autoreconf -i
 - ./configure
